fix align on ul elements

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -299,7 +299,9 @@ body {
  }
 
 }
-
+ ul {
+    padding-inline-start: 0;
+ }
 
 
 
